refactored login/authentication functions.

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "ecommerce-app",
+    "name": "E-Commerce App",
     "slug": "ecommerce-app",
     "version": "1.0.0",
     "orientation": "portrait",
