--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.20",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-screens": "~4.11.1",
     "react-native-safe-area-context": "5.4.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "expo-secure-store": "~14.2.3"
+    "react-native-screens": "~4.11.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/validator": "^13.15.2",
     "typescript": "~5.8.3"
   },
   "private": true
