--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native-stack": "^7.3.21",
     "expo": "~53.0.20",
+    "expo-auth-session": "~6.2.1",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
+    "firebase": "^12.1.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
