updated ManageUserData screen. Added ManageUserAddress Screen, which needs to be worked on and configured.

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "expo": "~53.0.20",
     "expo-auth-session": "~6.2.1",
     "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
+    "jwt-decode": "^4.0.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
