--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native-stack": "^7.3.21",
-    "expo": "~53.0.20",
+    "expo": "53.0.23",
     "expo-auth-session": "~6.2.1",
-    "expo-secure-store": "~14.2.3",
+    "expo-secure-store": "14.2.4",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-web-browser": "~14.2.0",
