--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native-stack": "^7.3.21",
+    "@stripe/stripe-react-native": "^0.54.1",
     "expo": "53.0.23",
     "expo-auth-session": "~6.2.1",
     "expo-secure-store": "14.2.4",
@@ -20,6 +21,7 @@
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.1.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-element-dropdown": "^2.12.4",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash": "^4.17.20",
     "@types/react": "~19.0.10",
     "@types/validator": "^13.15.2",
     "typescript": "~5.8.3"
