--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "npx expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@stripe/stripe-react-native": "^0.54.1",
     "expo": "53.0.23",
     "expo-auth-session": "~6.2.1",
+    "expo-notifications": "^0.32.13",
     "expo-secure-store": "14.2.4",
     "expo-splash-screen": "^0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -24,6 +25,7 @@
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
